[package]
name = "yew-router"
version = "0.1.0"
authors = ["Sascha Grunert <mail@saschagrunert.de>"]
categories = ["web-programming"]
description = "Routing extension to yew"
documentation = "https://docs.rs/yew-router"
homepage = "https://github.com/saschagrunert/yew-router"
keywords = ["web", "yew", "router", "routing", "webassembly"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/saschagrunert/yew-router"

[badges]
circle-ci = { repository = "saschagrunert/yew-router", branch = "master" }
codecov = { repository = "saschagrunert/yew-router", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[dependencies]
failure = "0.1.5"
serde = "1.0.92"
serde_derive = "1.0.92"
stdweb = "0.4.17"
yew = { git = "https://github.com/DenisKolodin/yew" }
