[package]
name = "yew-router"
version = "0.5.0"
authors = ["Sascha Grunert <mail@saschagrunert.de>"]
categories = ["web-programming"]
description = "Routing extension to yew"
documentation = "https://docs.rs/yew-router"
homepage = "https://github.com/saschagrunert/yew-router"
keywords = ["web", "yew", "router", "routing", "webassembly"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/saschagrunert/yew-router"
edition = "2018"

[badges]
circle-ci = { repository = "saschagrunert/yew-router", branch = "master" }
codecov = { repository = "saschagrunert/yew-router", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[dependencies]
failure = "0.1.5"
serde = { version = "1.0.101", features = ["derive"] }
stdweb = "0.4.19"
yew = "0.9.0"

[dev-dependencies]
smart-default = "0.5.2"
log = "0.4.8"
web_logger = "0.2.0"
